--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -22,25 +22,31 @@
         android:orientation="vertical"
         android:paddingTop="40dp">
 
-
         <TextView
             android:id="@+id/call_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="@string/searching"
             android:textColor="@color/black"
             android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/call_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:textColor="@color/gray_light"
+            android:textSize="12sp" />
 
         <Chronometer
             android:id="@+id/call_timer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:visibility=
-
-                "gone" />
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/call_state"
