--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="gray_dark">#9b9b9b</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="transparent">#00FFFFFF</color>
     <color name="blue_light">#7ed7ff</color>
     <color name="blue">#45a6d4</color>
     <color name="blue_dark">#0077a3</color>
